tests/snapshots/examples_fixtures/Modules__Data__Math__Test.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/Modules/Data/Math/Test.flx
== compile ==
failed (module)
== diagnostics ==
--> compiler error[E024]: MODULE PATH MISMATCH

Module name `Modules.Data.Math.Test` doesn't match file path `examples/Modules/Data/Math/Test.flx`.

  --> examples/Modules/Data/Math/Test.flx:1:1
  |
1 | module Modules.Data.Math.Test {
  | ^

Hint:
  Rename the module or move the file to match.
== stdout ==
<not executed>
